--- a/.gitattributes
+++ b/.gitattributes
@@ -3,11 +3,13 @@
 *.cpp text
 *.h text
 *.hpp text
+*.txt text
 
 # Visual Studio files maintain CRLF line endings
 *.sln text eol=crlf
 *.vcproj text eol=crlf
 *.vcproj.filters text eol=crlf
-*.bat eol=crlf
-*.rc eol=crlf
+*.bat text eol=crlf
+*.cmd text eol=crlf
+*.rc text eol=crlf
 
