Rewrote BitSet class to use a general templated implementation. Also comes with new features, including FindFirstSetBit, FindFirstClearBit, FindContiguousClearBits.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-Build/Objects/*
-Build/Binaries/*
+Tests/Build/Objects/*
+Tests/Build/Binaries/*
 ipch
 ipch/*
 *.vcxproj.user
 *.opensdf
 *.sdf
 *.suo
-
+Tests
